Fix list font length

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -270,7 +270,7 @@ promise.then(function (response) {
     Here are some common best practices when handling sessions and keys used for authentication purposes.
 </p>
 
-<ol>
+<ol class="margin-top margin-bottom-large text-size-normal">
     <li class="margin-bottom-tiny">Only keep user sessions active as long as needed.</li>
     <li class="margin-bottom-tiny">Only grant scopes required for your use case for your APIs keys, and nothing more.</li>
     <li class="margin-bottom-tiny">Access Appwrite via HTTPS to prevent any redirects from interfering with your requests.</li>
