use one instead of 1 bolded

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -277,7 +277,7 @@ promise.then(function (response) {
     <li class="margin-bottom-tiny">Prefer using OAuth2 for authentication with first-party redirects.</li>
     <li class="margin-bottom-tiny">Generate an SSL certification for the Appwrite instance.</li>
     <li class="margin-bottom-tiny">Keep API keys private and out of client-side code.</li>
-    <li class="margin-bottom-tiny">Only maintain <b>1</b> instance of the Client SDK in your app to avoid conflicting session data.</li>
+    <li class="margin-bottom-tiny">Only maintain <b>one</b> instance of the Client SDK in your app to avoid conflicting session data.</li>
     <li class="margin-bottom-tiny">When using the realtime service to get users' documents, clean up and resubscribe to the correct resources to maintain the correct app state.</li>
     <li class="margin-bottom-tiny">Unsubscribing from old resources is also recommended to prevent possible race conditions.</li>
 </ol>
