Fix text size of lists

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -251,7 +251,7 @@ promise.then(function (response) {
     Appwrite handles the persistence of the session in a consistent way across SDKs. After authenticating with an SDK, the SDK will persist the session so that the user will not need to log in again the next time they open the app. The mechanism for persistence depends on the SDK.
 </p>
 
-<ul>
+<ul class="margin-top margin-bottom-large text-size-normal">
     <li class="margin-bottom-tiny">Web - Uses a session secure cookie and falls back to local storage when a session cookie is not available.</li>
     <li class="margin-bottom-tiny">Flutter - Uses a session cookie stored in Application Documents through the path_provider package.</li>
     <li class="margin-bottom-tiny">Apple - Uses a session cookie.</li>
