--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -254,7 +254,7 @@ promise.then(function (response) {
 <ul class="margin-top margin-bottom-large text-size-normal">
     <li class="margin-bottom-tiny"><b>Web</b> - Uses a session secure cookie and falls back to local storage when a session cookie is not available.</li>
     <li class="margin-bottom-tiny"><b>Flutter</b> - Uses a session cookie stored in Application Documents through the <b>path_provider</b> package.</li>
-    <li class="margin-bottom-tiny"><b>Apple</b> - Uses a session cookie.</li>
+    <li class="margin-bottom-tiny"><b>Apple</b> - Uses a session cookie stored in UserDefaults.</li>
     <li class="margin-bottom-tiny"><b>Android</b> - Uses a session cookie stored in SharedPreferences.</li>
 </ul>
 
