--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -57,9 +57,9 @@
 
 <h2><a href="/docs/storage#createFile" id="createFile">Create File</a></h2>
 
-<p>After you create a bucket or have navigated to bucket details, you can access the `Files` tab so you can upload, view, delete and update files in the bucket using the Appwrite project's dashboard. You can also perform all those operations from Appwrite's client SDK, server SDKs, and REST APIs as long as you have the proper permission.</p>
+<p>After you create a bucket or have navigated to bucket details, you can access the <b>Files</b> tab so you can upload, view, delete and update files in the bucket using the Appwrite project's dashboard. You can also perform all those operations from Appwrite's client SDK, server SDKs, and REST APIs as long as you have the proper permission.</p>
 
-<p>When you are in the `Files` tab, you can click <b>Add File</b> and select a file to upload. If the bucket is configured to accept the file type and size you are uploading, your file will be uploaded, and you will see the file in the list of files.
+<p>When you are in the <b>Files</b> tab, you can click <b>Add File</b> and select a file to upload. If the bucket is configured to accept the file type and size you are uploading, your file will be uploaded, and you will see the file in the list of files.
 </p>
 
 <p>You can also upload files programmatically using our SDKs</p>
