--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -251,12 +251,93 @@ promise.then(function (response) {
     Appwrite handles the persistence of the session in a consistent way across SDKs. After authenticating with an SDK, the SDK will persist the session so that the user will not need to log in again the next time they open the app. The mechanism for persistence depends on the SDK.
 </p>
 
-<ul class="margin-top margin-bottom-large text-size-normal">
-    <li class="margin-bottom-tiny"><b>Web</b> - Uses a session secure cookie and falls back to local storage when a session cookie is not available.</li>
-    <li class="margin-bottom-tiny"><b>Flutter</b> - Uses a session cookie stored in Application Documents through the <b>path_provider</b> package.</li>
-    <li class="margin-bottom-tiny"><b>Apple</b> - Uses a session cookie stored in UserDefaults.</li>
-    <li class="margin-bottom-tiny"><b>Android</b> - Uses a session cookie stored in SharedPreferences.</li>
-</ul>
+<table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large text-size-small vertical">
+    <thead>
+        <tr>
+            <th style="width: 80px"></th>
+            <th style="width: 160px">SDK</th>
+            <th style="width: 180px">Persistence Method</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <?php
+                $image = new View(__DIR__.'/../general/image.phtml');
+                    echo $image
+                        ->setParam('srcLight', '/images-ee/platforms/web.svg')
+                        ->setParam('srcDark', '/images-ee/platforms/dark/web.svg')
+                        ->setParam('alt', 'Web SDK session persistence.')
+                        ->setParam('description', 'Web SDK session persistence.')
+                        ->render();
+                ?>
+            </td>
+            <td>
+                Web
+            </td>
+            <td>
+                Uses a session secure cookie and falls back to local storage when a session cookie is not available.
+            </td>
+        </tr>        
+        <tr>
+            <td>
+            <?php
+                $image = new View(__DIR__.'/../general/image.phtml');
+                    echo $image
+                        ->setParam('srcLight', '/images-ee/platforms/flutter.svg')
+                        ->setParam('srcDark', '/images-ee/platforms/dark/flutter.svg')
+                        ->setParam('alt', 'Flutter SDK session persistence.')
+                        ->setParam('description', 'Flutter SDK session persistence.')
+                        ->render();
+            ?>
+            </td>
+            <td>
+                Flutter
+            </td>
+            <td>
+                Uses a session cookie stored in Application Documents through the <b>path_provider</b> package.
+            </td>
+        </tr>
+        <tr>
+            <td>
+            <?php
+                $image = new View(__DIR__.'/../general/image.phtml');
+                    echo $image
+                        ->setParam('srcLight', '/images-ee/platforms/apple.svg')
+                        ->setParam('srcDark', '/images-ee/platforms/dark/apple.svg')
+                        ->setParam('alt', 'Apple SDK session persistence.')
+                        ->setParam('description', 'Apple SDK session persistence.')
+                        ->render();
+            ?>
+            </td>
+            <td>
+                Apple
+            </td>
+            <td>
+                Uses a session cookie stored in <b>UserDefaults</b>.
+            </td>
+        </tr>
+        <tr>
+            <td>
+            <?php
+                $image = new View(__DIR__.'/../general/image.phtml');
+                    echo $image
+                        ->setParam('srcLight', '/images-ee/platforms/android.svg')
+                        ->setParam('srcDark', '/images-ee/platforms/dark/android.svg')
+                        ->setParam('alt', 'Android SDK session persistence.')
+                        ->setParam('description', 'Android SDK session persistence.')
+                        ->render();
+            ?>
+            </td>
+            <td>
+                Android
+            </td>
+            <td>
+                Uses a session cookie stored in <b>SharedPreferences</b>.
+            </td>
+        </tr>
+    </tbody>
+</table>
 
 <h2><a href="/docs/authentication#security" id="security">Security</a></h2>
 
