Fix icon styling

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -262,15 +262,8 @@ promise.then(function (response) {
     <tbody>
         <tr>
             <td>
-                <?php
-                $image = new View(__DIR__.'/../general/image.phtml');
-                    echo $image
-                        ->setParam('srcLight', '/images-ee/platforms/web.svg')
-                        ->setParam('srcDark', '/images-ee/platforms/dark/web.svg')
-                        ->setParam('alt', 'Web SDK session persistence.')
-                        ->setParam('description', 'Web SDK session persistence.')
-                        ->render();
-                ?>
+                <img src="/images-ee/platforms/web.svg" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
+                <img src="/images-ee/platforms/dark/web.svg" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
             </td>
             <td>
                 Web
@@ -281,15 +274,8 @@ promise.then(function (response) {
         </tr>        
         <tr>
             <td>
-            <?php
-                $image = new View(__DIR__.'/../general/image.phtml');
-                    echo $image
-                        ->setParam('srcLight', '/images-ee/platforms/flutter.svg')
-                        ->setParam('srcDark', '/images-ee/platforms/dark/flutter.svg')
-                        ->setParam('alt', 'Flutter SDK session persistence.')
-                        ->setParam('description', 'Flutter SDK session persistence.')
-                        ->render();
-            ?>
+                <img src="/images-ee/platforms/flutter.svg" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
+                <img src="/images-ee/platforms/dark/flutter.svg" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
             </td>
             <td>
                 Flutter
@@ -300,15 +286,8 @@ promise.then(function (response) {
         </tr>
         <tr>
             <td>
-            <?php
-                $image = new View(__DIR__.'/../general/image.phtml');
-                    echo $image
-                        ->setParam('srcLight', '/images-ee/platforms/apple.svg')
-                        ->setParam('srcDark', '/images-ee/platforms/dark/apple.svg')
-                        ->setParam('alt', 'Apple SDK session persistence.')
-                        ->setParam('description', 'Apple SDK session persistence.')
-                        ->render();
-            ?>
+                <img src="/images-ee/platforms/apple.svg" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
+                <img src="/images-ee/platforms/dark/apple.svg" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
             </td>
             <td>
                 Apple
@@ -319,15 +298,8 @@ promise.then(function (response) {
         </tr>
         <tr>
             <td>
-            <?php
-                $image = new View(__DIR__.'/../general/image.phtml');
-                    echo $image
-                        ->setParam('srcLight', '/images-ee/platforms/android.svg')
-                        ->setParam('srcDark', '/images-ee/platforms/dark/android.svg')
-                        ->setParam('alt', 'Android SDK session persistence.')
-                        ->setParam('description', 'Android SDK session persistence.')
-                        ->render();
-            ?>
+                <img src="/images-ee/platforms/android.svg" alt="Logo" height="30" class="force-light sdk-logo margin-start margin-end" />
+                <img src="/images-ee/platforms/dark/android.svg" alt="Logo" height="30" class="force-dark sdk-logo margin-start margin-end" />
             </td>
             <td>
                 Android
