fix column width

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -255,8 +255,8 @@ promise.then(function (response) {
     <thead>
         <tr>
             <th style="width: 80px"></th>
-            <th style="width: 160px">SDK</th>
-            <th style="width: 180px">Persistence Method</th>
+            <th style="width: 120px">SDK</th>
+            <th>Persistence Method</th>
         </tr>
     </thead>
     <tbody>
