--- a/app/views/docs/keys.phtml
+++ b/app/views/docs/keys.phtml
@@ -4,9 +4,12 @@ $scopes = $this->getParam('scopes', );
 
 <p>Using your API Keys, you can access Appwrite services using the SDK of your choice. To create a new API key, go to your API keys tab in your project setting using your Appwrite console and click the 'Add API Key' button.</p>
 
-<p>When adding a new API Key, you can choose which permission scope to grant your application. It is a best practice to allow only the permissions you need to meet your project goals.</p>
+<p>When adding a new API Key, you can choose which permission scope to grant your application. If you need to replace your API Key, create a new key, update your app credentials and, once ready, delete your old key.</p>
 
-<p>If you need to replace your API Key, create a new key, update your app credentials and, once ready, delete your old key.</p>
+<div class="notice">
+  <h2>Best Practices</h2>
+  <p>It is a best practice to allow only the permissions you need to meet your project goals. API keys should be treated as a secret. Never share the API key and keep API keys out of client applications.</p>
+</div>
 
 <h2 id="scopes">Scopes</h2>
 
