--- a/app/views/docs/production.phtml
+++ b/app/views/docs/production.phtml
@@ -7,7 +7,7 @@
 <p>Make sure to keep this key in a safe place and never make it publicly accessible. There are many online resources with methods of keeping your secret keys safe in your servers.</p>
 
 <div class="notice">
-  <h2>Best Practices</h2>
+  <h2>Best Practice</h2>
   <p>You should always prefer <b>https</b> over http in production environments. This keeps your APIs secure and prevents any redirects from interfering with your requests.</p>
 </div>
 
