Rename iOS -> Apple references where appropriate

--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -179,7 +179,7 @@ suspend fun main() {
         </div>
     </li>
     <li>
-        <h3>iOS</h3>
+        <h3>Apple</h3>
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
 import AppwriteModels
@@ -300,7 +300,7 @@ suspend fun main() {
         </div>
     </li>
     <li>
-        <h3>iOS</h3>
+        <h3>Apple</h3>
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
 import AppwriteModels
@@ -486,7 +486,7 @@ suspend fun main() {
         </div>
     </li>
     <li>
-        <h3>iOS</h3>
+        <h3>Apple</h3>
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
 import AppwriteModels
@@ -629,7 +629,7 @@ suspend fun main() {
         </div>
     </li>
     <li>
-        <h3>iOS</h3>
+        <h3>Apple</h3>
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
 import AppwriteModels
@@ -737,7 +737,7 @@ suspend fun main() {
         </div>
     </li>
     <li>
-        <h3>iOS</h3>
+        <h3>Apple</h3>
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
 import AppwriteModels
