--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -576,7 +576,7 @@ void main() async {
         </div>
     </li>
     <li>
-        <h3>iOS</h3>
+        <h3>Apple</h3>
 
         <div class="ide margin-bottom" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
