--- a/app/views/docs/pagination.phtml
+++ b/app/views/docs/pagination.phtml
@@ -110,7 +110,7 @@ suspend fun main() {
         </div>
     </li>
     <li>
-        <h3>iOS</h3>
+        <h3>Apple</h3>
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
 import AppwriteModels
@@ -262,7 +262,7 @@ suspend fun main() {
         </div>
     </li>
     <li>
-        <h3>iOS</h3>
+        <h3>Apple</h3>
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
 import AppwriteModels
