--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -77,8 +77,9 @@ final user = await account.create(
 );</code></pre>
     </li>
     <li>
-        <h3>Apple</h3>import Appwrite
-import AppwriteModels
+        <h3>Apple</h3>
+        <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
+            <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
 
 let client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
