Fix wrong language for Android SDK

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -95,8 +95,8 @@ let user = try await account.create(
     </li>
     <li>
         <h3>Android</h3>
-        <div class="ide" data-lang="java" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-java" data-prism>import io.appwrite.Client
+        <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 import io.appwrite.services.Account
 
 val client = new Client()
@@ -176,8 +176,8 @@ let user = try await account.createAnonymousSession()</code></pre>
     </li>
     <li>
         <h3>Android</h3>
-        <div class="ide" data-lang="java" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-java" data-prism>import io.appwrite.Client
+        <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 import io.appwrite.services.Account
 
 val client = new Client()
@@ -245,8 +245,8 @@ try await account.createOAuth2Session("amazon")</code></pre>
     </li>
     <li>
         <h3>Android</h3>
-        <div class="ide" data-lang="java" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-java" data-prism>import io.appwrite.Client
+        <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 import io.appwrite.services.Account
 
 val client = new Client()
@@ -338,8 +338,8 @@ let session = try await account.createPhoneSession(
     </li>
     <li>
         <h3>Android</h3>
-        <div class="ide" data-lang="java" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-java" data-prism>import io.appwrite.Client
+        <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 import io.appwrite.services.Account
 
 val client = new Client()
@@ -417,8 +417,8 @@ let session = try await account.updatePhoneSession(
     </li>
     <li>
         <h3>Android</h3>
-        <div class="ide" data-lang="java" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-java" data-prism>import io.appwrite.Client
+        <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 import io.appwrite.services.Account
 
 val client = new Client()
@@ -506,8 +506,8 @@ let session = try await account.createEmailSession(
     </li>
     <li>
         <h3>Android</h3>
-        <div class="ide" data-lang="java" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-java" data-prism>import io.appwrite.Client
+        <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 import io.appwrite.services.Account
 
 val client = new Client()
@@ -580,8 +580,8 @@ let session = try await account.get()</code></pre>
     </li>
     <li>
         <h3>Android</h3>
-        <div class="ide" data-lang="java" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-java" data-prism>import io.appwrite.Client
+        <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 import io.appwrite.services.Account
 
 val client = new Client()
