Fix missing service instantiation for web account create

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -209,7 +209,9 @@ val user = account.createAnonymousSession()</code></pre>
 
 const client = new Client();
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
-    .setProject('5df5acd0d48c2')                // Your project ID
+    .setProject('5df5acd0d48c2');               // Your project ID
+
+const account = new Account(client);
 
 // Go to OAuth provider login page
 account.createOAuth2Session('amazon');</code></pre>
