Add matching comment for all clients for oauth session create

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -163,7 +163,6 @@ final user = await account.createAnonymousSession();</code></pre>
         <h3>Apple</h3>
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
-import AppwriteModels
 
 let client = Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1") // Your API Endpoint
@@ -228,6 +227,7 @@ final client = Client()
 
 final account = Account(client);
 
+// Go to OAuth provider login page
 await account.createOAuth2Session('amazon');</code></pre>
         </div>
     </li>
@@ -242,6 +242,7 @@ let client = Client()
 
 let account = Account(client)
 
+// Go to OAuth provider login page
 try await account.createOAuth2Session("amazon")</code></pre>
         </div>
     </li>
@@ -257,6 +258,7 @@ val client = new Client()
 
 val account = new Account(client)
 
+// Go to OAuth provider login page
 account.createOAuth2Session("amazon")</code></pre>
         </div>
     </li>
@@ -288,7 +290,7 @@ account.createOAuth2Session("amazon")</code></pre>
 
 const client = new Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1') // Your API Endpoint
-    .setProject('5df5acd0d48c2')                // Your project ID
+    .setProject('5df5acd0d48c2');               // Your project ID
 
 const account = new Account(client);
 
