--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -91,8 +91,10 @@ let user = try await account.create(
     userId: "[USER_ID]",
     email: "team@appwrite.io",
     password: "password"
-)
+)</code></pre>
+        </div>
     </li>
+</ul>
     <li>
         <h3>Android</h3>
         <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
