Fix typo in introduce

--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -657,7 +657,7 @@ func main() async throws {
     </li>
 </ul>
 
-<p>To sort based on multiple attributes, simply introduct multiple query methods.</p>
+<p>To sort based on multiple attributes, simply provide multiple query methods.</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
