Grammar correction in file.
Grammar correction in file.

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -1,6 +1,6 @@
 <p>
-    Appwrite provides authentication for many different use cases to fit the needs of developers. 
-    Appwrite manages authentication with a combination of accounts and sessions. 
+    AppWrite provides authentication for many different use cases to fit the needs of developers. 
+    AppWrite manages authentication with a combination of accounts and sessions. 
     Accounts can be created in many different ways, such as through an anonymous session, email and password, OAuth authentication, magic URLs, and more.
 </p>
 
@@ -17,13 +17,13 @@
 <h2><a href="/docs/authentication#create-an-account" id="create-an-account">Create An Account</a></h2>
 
 <p>
-    A user account in Appwrite is the primary way to access information for a given project. Accounts can be created in many different ways, including <a href="/docs/client/account#accountCreateEmailSession">email & password</a>, <a href="/docs/client/account#accountCreateAnonymousSession">anonymous sessions</a>, <a href="/docs/client/account#accountCreateOAuth2Session">OAuth2</a>, <a href="/docs/client/account#accountCreatePhoneSession">phone authentication</a>, and more. Applications can create and manage sessions through the REST API or Client SDKs.
+    A user account in AppWrite is the primary way to access information for a given project. Accounts can be created in many different ways, including <a href="/docs/client/account#accountCreateEmailSession">email & password</a>, <a href="/docs/client/account#accountCreateAnonymousSession">anonymous sessions</a>, <a href="/docs/client/account#accountCreateOAuth2Session">OAuth2</a>, <a href="/docs/client/account#accountCreatePhoneSession">phone authentication</a>, and more. Applications can create and manage sessions through the REST API or Client SDKs.
 </p>
 
 <h3><a href="/docs/authentication#email" id="email">Email</a></h3>
 
 <p>
-    Creating an account via email and password is one of the most common ways to sign up for an application. Appwrite provides email and password authentication out of the box. Using one of Appwrite's Client SDKs, or the REST APIs directly, you can create an account using an email address and password in your application.
+    Creating an account via email and password is one of the most common ways to sign up for an application. AppWrite provides email and password authentication out of the box. Using one of AppWrite's Client SDKs, or the REST APIs directly, you can create an account using an email address and password in your application.
 </p>
 
 <p>
@@ -56,7 +56,7 @@ promise.then(function (response) {
 </div>
 
 <p>
-    After an account is created, it can be verified through the <a href="/docs/account#accountCreateVerification">account verification route</a> provided by the Appwrite Accounts API. The user doesn't need to be verified to log in, but you can restrict resource access to verified users only using permissions.
+    After an account is created, it can be verified through the <a href="/docs/account#accountCreateVerification">account verification route</a> provided by the AppWrite Accounts API. The user doesn't need to be verified to log in, but you can restrict resource access to verified users only using permissions.
 </p>
 
 <h3><a href="/docs/authentication#anonymous-user" id="anonymous-user">Anonymous User</a></h3>
