Change column width to remove eye sores

--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -331,7 +331,7 @@ func main() async throws{
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
         <tr>
-            <th style="width: 150px">Query Method</th>
+            <th style="width: 100px">Query Method</th>
             <th>SDK Method Example</th>
             <th>Description</th>
         </tr>
@@ -353,7 +353,7 @@ func main() async throws{
             <td>Returns document if attribute is less than the provided value. Applies to any indexed attribute.</td>
         </tr>
         <tr>
-            <td>Less Than or Equal To</td>
+            <td>Less Than or Equal</td>
             <td><code>Query.lessThanEqual("score", 10)</code></td>
             <td>Returns document if attribute is less than or equal to the provided value. Applies to any indexed attribute.</td>
         </tr>
@@ -363,7 +363,7 @@ func main() async throws{
             <td>Returns document if attribute is greater than the provided value. Applies to any indexed attribute.</td>
         </tr>
         <tr>
-            <td>Greater Than or Equal To</td>
+            <td>Greater Than or Equal</td>
             <td><code>Query.greaterThanEqual("score", 10)</code></td>
             <td>Returns document if attribute is greater than or equal to the provided value. Applies to any indexed attribute.</td>
         </tr>
